apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: bryannoland/spring-petclinic-api-gateway
          ports:
            - containerPort: 8080
          command: ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
          # Uncomment below line if you have wait-for-it.sh in your local directory
          # volumeMounts:
          # - name: wait-for-it
          #   mountPath: /usr/src/app/wait-for-it.sh
          # Uncomment below section if you have wait-for-it.sh in your local directory
          # volumes:
          #  - name: wait-for-it
          #    configMap:
          #      name: wait-for-it
