configserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: bryannoland/spring-petclinic-config-server
        ports:
        - containerPort: 8888
        command: ["java", "-Djdk.tls.client.protocols=TLSv1.1,TLSv1.2", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
