discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: bryannoland/spring-petclinic-discovery-server
        ports:
        - containerPort: 8761
        command: ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
        # Uncomment below line if you have wait-for-it.sh in your local directory
        # volumeMounts:
        # - name: wait-for-it
        #   mountPath: /usr/src/app/wait-for-it.sh
      # Uncomment below section if you have wait-for-it.sh in your local directory
      # volumes:
      #  - name: wait-for-it
      #    configMap:
      #      name: wait-for-it
